terratest/examples/ingress-annotation-gslb-lifecycle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-gslb-lifecycle
  annotations:
    k8gb.io/strategy: failover
    k8gb.io/primary-geotag: "eu"
    k8gb.io/dns-ttl-seconds: "5"
    k8gb.io/splitbrain-threshold-seconds: "600"
spec:
  ingressClassName: nginx
  rules:
    - host: ingress-failover-simple.cloud.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-podinfo # Service name to enable GSLB for
                port:
                  name: http
